[tool.poetry]
name = "VILOCA"
version = "0.1.0"
description = "SHOrt Reads Assembly into Haplotypes"
license = "GPL-3.0-only"
authors = ["Benjamin Langer <blanger@student.ethz.ch>, Lara Fuhrmann <lara.fuhrmann@bsse.ethz.ch>"]
build = "build.py"
packages = [
    { include = "viloca" }
]

[tool.poetry.scripts]
viloca = 'viloca.cli:main'

[tool.poetry.dependencies]
python = ">=3.9.9,<3.11"
biopython = "^1.79"
numpy = "^1.21.4"
pysam = "^0.18.0"
pybind11 = "^2.9.0"
PyYAML = "^6.0"
scipy = "^1.7.3"
bio = "^1.3.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pandas = "^1.3.5"
pytest-mock = "^3.10.0"
cigar = "^0.1.3"

[pytest]
mock_use_standalone_module = true

[build-system]
requires = ["poetry-core>=1.0.7", "setuptools>=60", "wheel", "pybind11~=2.9.0"]
build-backend = "poetry.core.masonry.api"
